--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-800 text-gray-200 w-screen h-screen;
+  @apply bg-gray-800 text-gray-200 w-screen h-screen overflow-x-hidden;
   font-family: 'Nunito', sans-serif;
   line-height: 160%;
 }
